--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,29 @@
-/* .body {
-  background-color: black;
-} */
+.container {
+  max-width: 800px;
+  margin: auto;
+}
+
+.list-group-item {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 1rem;
+  border: 1px solid #ddd;
+  margin-bottom: 0.5rem;
+}
+
+.list-group-item h5 {
+  margin: 0;
+  font-size: 1.25rem;
+}
+
+.list-group-item p {
+  margin: 0.5rem 0;
+}
+
+.list-group-item small {
+  color: #666;
+}
 
 #root {
   max-width: 1280px;
