--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,10 @@ body {
   margin-bottom: 20px;
 }
 
+.form-group {
+  width: 50%;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -128,4 +132,17 @@ body {
 
 .read-the-docs {
   color: #888;
+}
+
+.alert{
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
 }
