--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,12 @@ body {
   padding: 0px 18px;
 }
 
+.button-group {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 0.5rem; /* Espaço entre os botões */
+}
 
 @keyframes logo-spin {
   from {
@@ -145,4 +151,26 @@ body {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
+}
+
+.me-2 {
+  margin-right: 0.5rem;
+}
+
+.btn {
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: #fff;
+  text-align: right;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  color: #fff;
 }
